vlib/v/checker/tests/globals/closure_capture_global_var.vv
module main

__global (
	number	int
)

fn init() {
	number = 123
}

fn main() {
	f1 := fn [number] () {
		println(number)
	}
	f1()
}
